--- a/assets/scss/custom/components/_global.scss
+++ b/assets/scss/custom/components/_global.scss
@@ -94,15 +94,11 @@ ul, ol{
                 }
             }
         }
-        .total-amount-container {
-            margin-top: em(200);
-            text-align: center;
-            @media only screen and (max-width: 991px){
-                margin-top: 100px;
-            }
-            h2, h6, h3 {
-                margin: 0;
-            }
+    }
+    &.total-amount-container {
+        text-align: center;
+        h2, h6, h3 {
+            margin: 0;
         }
     }
     &.form-link-container {
